--- a/index.html
+++ b/index.html
@@ -5,32 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Обучение | Анонимность | Создание сайтов</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
         body {
-            font-family: Arial, sans-serif;
-            background-color: #111;
-            color: white;
+            font-family: 'VT323', monospace;
+            background-color: black;
+            color: #00ff00;
             text-align: center;
             padding: 20px;
         }
         h1 {
-            color: red;
+            color: #00ff00;
+            text-shadow: 0 0 10px #00ff00;
         }
         .container {
             max-width: 600px;
             margin: auto;
-            background: #222;
+            background: #111;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
+            box-shadow: 0 0 15px rgba(0, 255, 0, 0.8);
         }
         .btn {
             display: inline-block;
-            background: red;
-            color: white;
+            background: #00ff00;
+            color: black;
             padding: 10px 20px;
             margin: 10px;
             text-decoration: none;
             border-radius: 5px;
+            box-shadow: 0 0 10px #00ff00;
+        }
+        .btn:hover {
+            background: black;
+            color: #00ff00;
+            box-shadow: 0 0 15px #00ff00;
         }
     </style>
 </head>
@@ -47,7 +55,7 @@
             <li>😀 Создавать крутые стикеры</li>
             <li>😀 Делать стильные посты</li>
             <li>😀 Украшать браузер и делать его уникальным</li>
-            <li>🔴 Ссылка https://t.me/npoxogka
+            <li>🔴 Ссылка <a href="https://t.me/npoxogka" class="btn">Перейти</a></li>
         </ul>
         <h2>Контакты:</h2>
         <p>➕ Поддержка: <a href="https://t.me/IWKEJDOBOT" class="btn">@IWKEJDOBOT</a></p>
